# soil2

./: .gitignore  CMakeLists.txt  premake5.lua  soil2.cpp
src/: SOIL2.c  etc1_utils.c  image_DXT.c  image_helper.c
